@@ -1,3 +1,12 @@
+2011-02-15  Pratik Solanki  <psolanki@apple.com>
+
+        Move WTF_USE_CFNETWORK to Platform.h
+        https://bugs.webkit.org/show_bug.cgi?id=54168
+
+        Reviewed by Darin Adler.
+
+        * config.h: Remove WTF_USE_CFNETWORK.
+
 2011-02-15  Kenneth Russell  <kbr@google.com>
 
         Reviewed by Darin Fisher.
